--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     </nav>
     <main>
         <section class="about_us">
-            <h1>About us</h1>
+            <h1>about us page</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium atque commodi consequatur cupiditate dicta eaque molestias omnis praesentium quas voluptatibus.</p>
             <h2>Our mission</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae doloremque facilis laborum nulla tempora tenetur voluptas? Eligendi facere sunt voluptatum?</p>
