--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
         </ul>
     </nav>
 <div class="hero-image">
-    <div class="hero-text">THE NAIROBI HOSPITAL;</div>
+    <div class="hero-text">THE WARD;</div>
 </div>
 <section class="content">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores at commodi dignissimos dolorum fugiat in nostrum provident quod voluptatem, voluptatum?</p>
