--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>ABOUT</title>
     <link rel="stylesheet" href="assets/style/main.css">
 </head>
 <body>
